--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,6 +28,13 @@ body {
   padding-top: 100px;
   display: flex;
   flex-direction: column;
+  opacity: 0;
+  transform: translateY(-20%);
+  transition: 3s ease;
+}
+.intro.active {
+  opacity: 1;
+  transform: translateY(0);
 }
 .intro h6,
 h3,
@@ -42,7 +49,7 @@ p {
   padding-right: 150px;
 }
 .intro p {
-  font-size: 14px;
+  font-size: 17px;
   padding-right: 220px;
   margin-bottom: 30px;
   line-height: 1.4;
@@ -69,6 +76,13 @@ p {
   width: 100%;
   height: auto;
   overflow: hidden;
+  opacity: 0;
+  transform: translateY(40%);
+  transition: 3s ease;
+}
+.img img.active {
+  opacity: 1;
+  transform: translateY(0);
 }
 .nav_button a {
   border: none;
