--- a/CSS/skill_section.css
+++ b/CSS/skill_section.css
@@ -14,6 +14,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  /* opacity: 0; */
+  transform: scale(1.3);
+  transition: 3s ease;
+}
+.box1.active,
+.box2.active {
+  transform: scale(1.1);
 }
 .skill {
   border-radius: 15%;
@@ -47,23 +54,30 @@
 .objective {
   width: 80%;
   margin: 3%;
+  opacity: 0;
+  transform: translateY(20%);
+  transition: 4s ease;
+}
+.objective.active {
+  opacity: 1;
+  transform: translateY(0);
 }
 .objective > .content {
-  margin: 25% 30% 0 5%;
+  margin: 15% 25% 0 5%;
 }
 .objective > .content h6 {
   color: #64f4ab;
 }
 .objective > .content h2 {
-  font-size: 29px;
+  font-size: 35px;
   padding: 10px 0;
   line-height: 1.5;
 }
 .objective > .content p {
-  font-size: 14px;
+  font-size: 17px;
   opacity: 0.9;
   padding: 0 0 50px 0;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 @media (min-width: 350px) and (max-width: 767px) {
   #skills {
