--- a/CSS/project_section.css
+++ b/CSS/project_section.css
@@ -31,6 +31,11 @@
   padding: 0 0 20px 0;
   line-height: 1.2;
 }
+.read_more a {
+  text-decoration: none;
+  font-size: 19px;
+  color: #ffaf29;
+}
 
 .project_img {
   margin: 3% 0;
