--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -4,14 +4,6 @@
   align-items: center;
   justify-content: space-between;
 }
-
-/* .logo {
-  margin-left: 5%;
-  color: #ffffff;
-  font-size: 25px;
-  font-weight: bold;
-  border: 2px solid blue;
-} */
 .logo_header {
   display: flex;
   margin-left: 2%;
@@ -89,34 +81,19 @@
 
 @media (min-width: 350px) and (max-width: 767px) {
   .navbar {
-    /* display: flex; */
     flex-direction: column;
-    /* justify-content: space-between; */
     width: 100%;
-    /* padding-top: 2%;
-    padding-bottom: 2%; */
   }
-
   .main_nav {
     display: none;
   }
-
   .show_nav {
-    padding-top: 3%;
     display: flex;
-    width: 100vw;
     height: 40vh;
     flex-direction: column;
     justify-content: center;
-  }
-
-  .main_nav li {
-    width: 100%;
-    height: 50px;
-    /* font-size: 25px; */
-    justify-content: center;
-    text-align: center;
-    padding: 0%;
+    gap: 40px;
+    background-color: #2d2e32;
   }
   .navbar_toggle {
     font-size: 30px;
@@ -128,7 +105,7 @@
     display: block;
   }
   .logo_header {
-    width: 100%;
+    width: 110%;
     justify-content: space-between;
     margin-right: 2%;
   }
